--- a/test3_postgres/Makefile
+++ b/test3_postgres/Makefile
@@ -9,5 +9,11 @@ up:
 down:
 	@docker compose down
 
+generate_data:
+	docker run --rm -e PGPASSWORD="challenge" -v "${PWD}:/app" "${service}" -h 192.168.1.83 -p 5432 -U challenge -d challenge -f generate_data.sql
+
 bad_query:
 	docker run --rm -e PGPASSWORD="challenge" -v "${PWD}:/app" "${service}" -h 192.168.1.83 -p 5432 -U challenge -d challenge -f bad_query.sql
+
+optimized_query:
+	docker run --rm -e PGPASSWORD="challenge" -v "${PWD}:/app" "${service}" -h 192.168.1.83 -p 5432 -U challenge -d challenge -f optimized_query.sql
