actualizando readme y agregando validador de estado a docker compose

--- a/test2_troubleshooting/docker-compose.yml
+++ b/test2_troubleshooting/docker-compose.yml
@@ -6,12 +6,19 @@ services:
     ports:
       - "8080:80"
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
 
   backend:
     build: ./backend
     ports:
       - "8081:5000"
+    healthcheck:
+      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:5000/')"]
+      interval: 1s
+      timeout: 3s
+      retries: 5
+      start_period: 5s
     deploy:
       resources:
         limits:
